Use new flow in `build_png()`
Additionally:

- Standardize slides = NULL to slides = "all"
- Throw an error if slides is otherwise non-numeric
- Simplify `zip_pngs()` a bit
- Add basic tests for `build_png()`

--- a/tests/testthat/slides/basic/slides.Rmd
+++ b/tests/testthat/slides/basic/slides.Rmd
@@ -2,7 +2,7 @@
 title: Test build_html() paths
 output:
     xaringan::moon_reader:
-        css: test.css
+        css: [default-fonts, default, test.css]
 ---
 
 ![](placekitten.jpg)
