--- a/README.Rmd
+++ b/README.Rmd
@@ -17,13 +17,13 @@ knitr::opts_chunk$set(
 IS_README <- TRUE
 ```
 
+# xaringanBuilder <a href='https://jhelvy.github.io/xaringanBuilder/'><img src='man/figures/hex_sticker.png' align="right" height="139" /></a>
+
 <!-- badges: start -->
 [![Lifecycle:
 experimental](https://img.shields.io/badge/lifecycle-experimental-orange.svg)](https://www.tidyverse.org/lifecycle/#experimental)
 [![Travis build status](https://travis-ci.com/jhelvy/xaringanBuilder.svg?branch=master)](https://travis-ci.com/jhelvy/xaringanBuilder)
 <!-- badges: end -->
-
-## xaringanBuilder <img src="man/figures/hex_sticker.png" align="right" width="200"/>
 
 Build xaringan slides to multiple output formats:
 
@@ -152,7 +152,7 @@ build_pptx("https://jhelvy.github.io/xaringanBuilder/reference/figures/slides.ht
 
 ### Build PNG
 
-Build png image(s) of some or all slides. Use the `slides` argument to determine which slides to include (defaults to `1`, returning just the first slide) .
+Build png image(s) of some or all slides. Use the `slides` argument to determine which slides to include (defaults to `1`, returning just the first slide).
 
 Input can be a Rmd file, html file, pdf file, or url:
 
@@ -163,9 +163,12 @@ build_png("slides.html")
 build_png("slides.pdf")
 build_png("https://jhelvy.github.io/xaringanBuilder/reference/figures/slides.html")
 
-# Build zip file of multiple or all slides
+# Build zip file of different subsets of slides
 build_png("slides.pdf", slides = c(1, 3, 5))
 build_png("slides.pdf", slides = "all")
+build_png("slides.pdf", slides = "first")
+build_png("slides.pdf", slides = "last")
+build_png("slides.pdf", slides = -1) # Negative indexing removes slides
 ```
 
 Example:
@@ -242,9 +245,8 @@ For example, to build a pptx from a Rmd file without Chrome, you could:
 
 ## Author, Version, and License Information
 
-- Author: *John Paul Helveston* [www.jhelvy.com](http://www.jhelvy.com/)
+- Authors: [John Paul Helveston](http://www.jhelvy.com/) (_aut_, _cre_, _cph_) & [Garrick Aden-Buie](https://www.garrickadenbuie.com/) (_aut_)
 - Date First Written: *September 27, 2020*
-- Most Recent Update: `r format(Sys.Date(), format="%B %d, %Y")`
 - License: [MIT](https://github.com/jhelvy/xaringanBuilder/blob/master/LICENSE.md)
 
 ## Citation Information
