--- a/inst/example/slides.Rmd
+++ b/inst/example/slides.Rmd
@@ -2,7 +2,7 @@
 title: "{xaringanBuilder}"
 subtitle: "Build xaringan slides to different outputs"
 author: "John Paul Helveston"
-date: "2020/09/27 (updated: `r Sys.Date()`)"
+date: "z`r Sys.Date()`"
 output:
   xaringan::moon_reader:
     lib_dir: libs
@@ -121,6 +121,25 @@ head(mtcars)
 ```
 ]
 ]
+
+---
+
+## Use the `slides` argument to control which slides get built
+
+Examples building from PDF to PNG:
+
+```{r, eval=FALSE}
+# Build the first or last slide only
+build_png("slides.pdf", output_file = "first_slide.png", slides = "first")
+build_png("slides.pdf", output_file = "last_slide.png", slides = "last")
+
+# Choose subsets of slides
+build_png("slides.pdf", slides = c(1, 3, 5)) 
+build_png("slides.pdf", slides = -1) # Negative indices remove slides
+
+# Build all slides
+build_png("slides.pdf", slides = "all")
+```
 
 ---
 class: center, middle, inverse
