--- a/README.Rmd
+++ b/README.Rmd
@@ -157,23 +157,26 @@ Build png image(s) of some or all slides. Use the `slides` argument to determine
 Input can be a Rmd file, html file, pdf file, or url:
 
 ```{r}
-# By default, creates a png of only the first slide:
-build_png("slides.Rmd")
-build_png("slides.html")
-build_png("slides.pdf")
-build_png("https://jhelvy.github.io/xaringanBuilder/reference/figures/slides.html")
+# By default, a png of only the first slide is built
+build_png("slides.Rmd", output_file = "title_slide.png")
+build_png("slides.html", output_file = "title_slide.png")
+build_png("slides.pdf", output_file = "title_slide.png")
+build_png(
+  "https://jhelvy.github.io/xaringanBuilder/reference/figures/slides.html",
+  output_file = "title_slide.png"
+)
 
-# Build zip file of different subsets of slides
-build_png("slides.pdf", slides = c(1, 3, 5))
+# Use the `slides` argument to control which slides get build into pngs
+build_png("slides.pdf", output_file = "first_slide.png", slides = "first")
+build_png("slides.pdf", output_file = "last_slide.png", slides = "last")
+build_png("slides.pdf", slides = c(1, 3, 5)) # Choose subsets of slides
+build_png("slides.pdf", slides = -1) # Negative indices remove slides
 build_png("slides.pdf", slides = "all")
-build_png("slides.pdf", slides = "first")
-build_png("slides.pdf", slides = "last")
-build_png("slides.pdf", slides = -1) # Negative indexing removes slides
 ```
 
 Example:
 
-<img src="man/figures/slides.png" width=500>
+<img src="man/figures/title_slide.png" width=500>
 
 ### Build Social
 
