--- a/README.Rmd
+++ b/README.Rmd
@@ -17,7 +17,7 @@ knitr::opts_chunk$set(
 IS_README <- TRUE
 ```
 
-# xaringanBuilder <a href='https://jhelvy.github.io/xaringanBuilder/'><img src='man/figures/hex_sticker.png' align="right" height="139" /></a>
+# xaringanBuilder <a href='https://jhelvy.github.io/xaringanBuilder/'><img src='man/figures/logo.png' align="right" height="139" /></a>
 
 <!-- badges: start -->
 [![Lifecycle:
