List suggested packages for outputs in readme

--- a/README.Rmd
+++ b/README.Rmd
@@ -48,6 +48,21 @@ Some output formats require additional packages, and each format will provide in
 remotes::install_github("jhelvy/renderthis", dependencies = TRUE)
 ```
 
+Because many users will not need all output formats,
+several outputs require additional packages that are suggested dependencies
+and aren't installed by default unless requested as described above.
+The table below lists the packages required for each output type:
+
+| Output | Requires |
+|:-----|:-----|
+| PDF (simple) | Google Chrome (for [pagedown](https://pagedown.rbind.io/)) |
+| PDF (complex) | [chromote](https://rstudio.github.io/chromote/) |
+| PNG | Requires PDF |
+| GIF | Requires PDF |
+| MP4 | [av](https://docs.ropensci.org/av) |
+| PPTX | [officer](https://ardata-fr.github.io/officeverse/) |
+| Social | [chromote](https://rstudio.github.io/chromote/) |
+
 **Note**: To get the most out of renderthis, we recommend installing the package **with dependencies** and making sure that you have a [local installation of Google Chrome](https://jhelvy.github.io/renderthis/articles/renderthis-setup.html#local-chrome-installation).
 
 ## Usage
