added `pagedown::find_chrome()` hint on setup vignette, simplified readme

--- a/README.Rmd
+++ b/README.Rmd
@@ -35,11 +35,19 @@ This package contains functions for rendering [R Markdown][rmarkdown] and [Quart
 
 **Looking for xaringanBuilder?**
 The package formerly known as xaringanBuilder is now **renderthis**.
-If you need to install xaringanBuilder under the previous package name, [see the instructions below](#installing-xaringanbuilder).
+If you need to install xaringanBuilder under the previous package name,
+[see the instructions below](#installing-xaringanbuilder).
 
 ## Installation
 
-You can install the latest version of renderthis from [CRAN](https://cran.r-project.org/) with:
+**Note**: To get the most out of renderthis, we recommend installing the
+package **with dependencies** and making sure that you have a local
+installation of Google Chrome. See the
+[Setup](https://jhelvy.github.io/renderthis/articles/renderthis-setup.html)
+page for details.
+
+You can install the latest version of renderthis from
+[CRAN](https://cran.r-project.org/) with:
 
 ```{r}
 install.packages("renderthis")
@@ -52,7 +60,9 @@ And the development version from GitHub with:
 remotes::install_github("jhelvy/renderthis")
 ```
 
-Some output formats require additional packages, and each format will provide instructions about how to install any missing dependencies. You can also choose to install renderthis with all of its dependencies:
+Some output formats require additional packages, and each format will provide
+instructions about how to install any missing dependencies. You can also
+choose to install renderthis with all of its dependencies:
 
 ```{r}
 # From CRAN
@@ -62,31 +72,14 @@ install.packages("renderthis", dependencies = TRUE)
 remotes::install_github("jhelvy/renderthis", dependencies = TRUE)
 ```
 
-**Note**: To get the most out of renderthis, we recommend installing the package **with dependencies** and making sure that you have a [local installation of Google Chrome](https://jhelvy.github.io/renderthis/articles/renderthis-setup.html#local-chrome-installation).
-
-Because many users will not need all output formats,
-several outputs require additional packages that are suggested dependencies
-and aren't installed by default unless requested as described above.
-The table below lists the packages required for each output type:
-
-| Output | Requires |
-|:-----|:-----|
-| PDF (simple) | Google Chrome (for [pagedown](https://pagedown.rbind.io/)) |
-| PDF (complex) | [chromote](https://rstudio.github.io/chromote/) |
-| PNG | Requires PDF |
-| GIF | Requires PDF |
-| MP4 | [av](https://docs.ropensci.org/av/) |
-| PPTX | [officer](https://ardata-fr.github.io/officeverse/) |
-| Social | [webshot2](https://rstudio.github.io/webshot2/) |
-
-
 ## Usage
 
 ```{r child="man/fragments/usage.Rmd", eval = TRUE}
 
 ```
 
-Learn more about renderthis in the [Get Started article](https://jhelvy.github.io/renderthis/articles/renderthis.html).
+Learn more about renderthis in the
+[Get Started article](https://jhelvy.github.io/renderthis/articles/renderthis.html).
 
 ## Author and License Information
 
