--- a/vignettes/renderthis-setup.Rmd
+++ b/vignettes/renderthis-setup.Rmd
@@ -10,31 +10,52 @@ vignette: >
 ```{r setup, include = FALSE}
 knitr::opts_chunk$set(
   collapse = TRUE,
-  comment = "#>"
+  comment = "#>",
+  eval = FALSE
 )
 ```
 
-To get the most out of renderthis, we recommend installing the package **with dependencies** and making sure that you have a local installation of Chrome.
+To get the most out of renderthis, we recommend installing the package
+**with dependencies** and making sure that you have a local installation
+of Chrome.
 
 # Installation
 
-You can install the current version of renderthis from GitHub:
+You can install the latest version of renderthis from
+[CRAN](https://cran.r-project.org/) with:
 
-```{r, eval=FALSE}
+```{r}
+install.packages("renderthis")
+```
+
+And the development version from GitHub with:
+
+```{r}
 # install.packages("remotes")
 remotes::install_github("jhelvy/renderthis")
 ```
 
-Some output formats require additional packages, and each format will provide instructions about how to install any missing dependencies. You can also choose to install renderthis with all of its dependencies:
+Some output formats require additional packages, and each format will provide
+instructions about how to install any missing dependencies. You can also
+choose to install renderthis with all of its dependencies:
 
-```{r, eval=FALSE}
-# install.packages("remotes")
+```{r}
+# From CRAN
+install.packages("renderthis", dependencies = TRUE)
+
+# From GitHub
 remotes::install_github("jhelvy/renderthis", dependencies = TRUE)
 ```
 
 # Local Chrome Installation
 
-Rendering the PDF requires a local installation of Chrome. If you don't have Chrome installed, you can use other browsers based on Chromium, such as Chromium itself, Edge, Vivaldi, Brave, or Opera. In this case, you will need to set the path to the browser you want to use for the [pagedown](https://github.com/rstudio/pagedown) package as well as the [chromote](https://github.com/rstudio/chromote) package if you use the `complex_slides = TRUE` or `partial_slides = TRUE` arguments.
+Rendering the PDF requires a local installation of Chrome. If you don't have
+Chrome installed, you can use other browsers based on Chromium, such as
+Chromium itself, Edge, Vivaldi, Brave, or Opera. In this case, you will need
+to set the path to the browser you want to use for the
+[pagedown](https://github.com/rstudio/pagedown) package as well as the
+[chromote](https://github.com/rstudio/chromote) package if you use the
+`complex_slides = TRUE` or `partial_slides = TRUE` arguments.
 
 After installing the packages, you can set the paths like this:
 
@@ -43,7 +64,16 @@ Sys.setenv(PAGEDOWN_CHROME = "/path/to/browser")
 Sys.setenv(CHROMOTE_CHROME = "/path/to/browser")
 ```
 
-If you are unable to install Chrome (e.g. on a computing cluster), the recommended workflow is to render intermediate output formats and use an alternative method for rendering the PDF.
+If you're not sure where Chrome lives on your machine,
+try the following command to search for it:
+
+```{r, eval=FALSE}
+pagedown::find_chrome()
+```
+
+If you are unable to install Chrome (e.g. on a computing cluster), the
+recommended workflow is to render intermediate output formats and use an
+alternative method for rendering the PDF.
 
 For example, to render a pptx from a Rmd file without Chrome, you could:
 
@@ -51,3 +81,20 @@ For example, to render a pptx from a Rmd file without Chrome, you could:
 2. Use vscode remote and vscode-preview-server extension to open the html on a local machine (preferrably with Chrome installed)
 3. Save to pdf on Chrome
 4. Render the pptx with `to_pptx(from = "slides.pdf")`
+
+# Dependencies
+
+Because many users will not need all output formats,
+several outputs require additional packages that are suggested dependencies
+and aren't installed by default unless requested as described above.
+The table below lists the packages required for each output type:
+
+| Output | Requires |
+|:-----|:-----|
+| PDF (simple) | Google Chrome (for [pagedown](https://pagedown.rbind.io/)) |
+| PDF (complex) | [chromote](https://rstudio.github.io/chromote/) |
+| PNG | Requires PDF |
+| GIF | Requires PDF |
+| MP4 | [av](https://docs.ropensci.org/av/) |
+| PPTX | [officer](https://ardata-fr.github.io/officeverse/) |
+| Social | [webshot2](https://rstudio.github.io/webshot2/) |
