--- a/vignettes/renderthis.Rmd
+++ b/vignettes/renderthis.Rmd
@@ -23,18 +23,20 @@ knitr::opts_chunk$set(
 
 ## Render HTML
 
-Render an html file from an Rmd file of xaringan slides:
+Render an HTML file from an `.Rmd` file of xaringan slides or `.qmd` of Quarto revealjs slides:
 
 ```{r}
 to_html(from = "slides.Rmd")
+to_html(from = "slides.qmd")
 ```
 
 ## Render PDF
 
-Input can be an Rmd file, html file, or url:
+Input can be an `.Rmd` file, `.qmd` file, `.html` file, or url:
 
 ```{r}
 to_pdf(from = "slides.Rmd")
+to_pdf(from = "slides.qmd")
 to_pdf(from = "slides.html")
 to_pdf(from = "https://jhelvy.github.io/renderthis/example/slides.html")
 ```
@@ -43,10 +45,11 @@ to_pdf(from = "https://jhelvy.github.io/renderthis/example/slides.html")
 
 ## Render GIF
 
-Input can be an Rmd file, html file, pdf file, or url:
+Input can be an `.Rmd` file, `.qmd` file, `.html` file, `.pdf` file, or url:
 
 ```{r}
 to_gif(from = "slides.Rmd")
+to_gif(from = "slides.qmd")
 to_gif(from = "slides.html")
 to_gif(from = "slides.pdf")
 to_gif(from = "https://jhelvy.github.io/renderthis/example/slides.html")
@@ -58,10 +61,11 @@ Example:
 
 ## Render MP4
 
-Input can be an Rmd file, html file, pdf file, or url:
+Input can be an `.Rmd` file, `.qmd` file, `.html` file, `.pdf` file, or url:
 
 ```{r}
 to_mp4(from = "slides.Rmd")
+to_mp4(from = "slides.qmd")
 to_mp4(from = "slides.html")
 to_mp4(from = "slides.pdf")
 to_mp4(from = "https://jhelvy.github.io/renderthis/example/slides.html")
@@ -73,10 +77,11 @@ Creates a pptx file where each slide contains a png image of each slide. While y
 
 (See the [slidex](https://github.com/datalorax/slidex) package by @datalorax to do the opposite: pptx --> xaringan!)
 
-Input can be an Rmd file, html file, pdf file, or url:
+Input can be an `.Rmd` file, `.qmd` file, `.html` file, `.pdf` file, or url:
 
 ```{r}
 to_pptx(from = "slides.Rmd")
+to_pptx(from = "slides.qmd")
 to_pptx(from = "slides.html")
 to_pptx(from = "slides.pdf")
 to_pptx(from = "https://jhelvy.github.io/renderthis/example/slides.html")
@@ -86,11 +91,12 @@ to_pptx(from = "https://jhelvy.github.io/renderthis/example/slides.html")
 
 Render png image(s) of some or all slides. Use the `slides` argument to determine which slides to include (defaults to `1`, returning just the first slide).
 
-Input can be an Rmd file, html file, pdf file, or url:
+Input can be an `.Rmd` file, `.qmd` file, `.html` file, `.pdf` file, or url:
 
 ```{r}
 # By default, a png of only the first slide is built
 to_png(from = "slides.Rmd", to = "title_slide.png")
+to_png(from = "slides.qmd", to = "title_slide.png")
 to_png(from = "slides.html", to = "title_slide.png")
 to_png(from = "slides.pdf", to = "title_slide.png")
 to_png(from = 
@@ -112,7 +118,7 @@ Example:
 
 ## Render Social
 
-Render a png of the first slide from an Rmd file. Image is sized for sharing on social media (e.g. Twitter).
+Render a png of the first slide from an `.Rmd` file of xaringan slides (Quarto slides not yet supported). Image is sized for sharing on social media (e.g. Twitter).
 
 ```{r}
 to_social(from = "slides.Rmd")
