--- a/README.Rmd
+++ b/README.Rmd
@@ -34,8 +34,8 @@ stable](https://lifecycle.r-lib.org/articles/figures/lifecycle-stable.svg)](http
 This package contains functions for rendering [R Markdown][rmarkdown] and [Quarto][quarto] documents — priamrily [xaringan] or [revealjs] slides — to different formats, including HTML, PDF, PNG, GIF, PPTX, and MP4, as well as a 'social' output, a png of the first slide re-sized for sharing on social media.
 
 **Looking for xaringanBuilder?**
-The package formerly known as xaringanBuilder is now **renderthis**.
-If you need to install xaringanBuilder under the previous package name,
+The `renderthis` package was previously called `xaringanBuilder`. We updated the name as the package evolved (see [this blog post](https://www.jhelvy.com/blog/2022-06-28-introducing-renderthis/) detailing the package's history)
+If you need to install `xaringanBuilder` under the previous package name,
 [see the instructions below](#installing-xaringanbuilder).
 
 ## Installation
@@ -46,30 +46,20 @@ installation of Google Chrome. See the
 [Setup](https://jhelvy.github.io/renderthis/articles/renderthis-setup.html)
 page for details.
 
-You can install the latest version of renderthis from
-[CRAN](https://cran.r-project.org/) with:
+Since `renderthis` is temporarily not on CRAN (we'll eventually get it back up), you can install it from GitHub with:
 
 ```{r}
-install.packages("renderthis")
-```
-
-And the development version from GitHub with:
-
-```{r}
-# install.packages("remotes")
-remotes::install_github("jhelvy/renderthis")
+# install.packages("pak")
+pak::pak("jhelvy/renderthis")
 ```
 
 Some output formats require additional packages, and each format will provide
 instructions about how to install any missing dependencies. You can also
-choose to install renderthis with all of its dependencies:
+choose to install `renderthis` with all of its dependencies:
 
 ```{r}
-# From CRAN
-install.packages("renderthis", dependencies = TRUE)
-
 # From GitHub
-remotes::install_github("jhelvy/renderthis", dependencies = TRUE)
+pak::pak("jhelvy/renderthis", dependencies = TRUE)
 ```
 
 ## Usage
@@ -97,7 +87,7 @@ citation("renderthis")
 
 ## Installing xaringanBuilder
 
-You can install the xaringanBuilder package as it was just prior to the name change with:
+If you want, you can still install the `xaringanBuilder` package as it was just prior to the name change with:
 
 ```r
 remotes::install_github("jhelvy/renderthis@v0.0.9")
