--- a/vignettes/renderthis-setup.Rmd
+++ b/vignettes/renderthis-setup.Rmd
@@ -21,30 +21,20 @@ of Chrome.
 
 # Installation
 
-You can install the latest version of renderthis from
-[CRAN](https://cran.r-project.org/) with:
+Since `renderthis` is temporarily not on CRAN (we'll eventually get it back up), you can install it from GitHub with:
 
 ```{r}
-install.packages("renderthis")
-```
-
-And the development version from GitHub with:
-
-```{r}
-# install.packages("remotes")
-remotes::install_github("jhelvy/renderthis")
+# install.packages("pak")
+pak::pak("jhelvy/renderthis")
 ```
 
 Some output formats require additional packages, and each format will provide
 instructions about how to install any missing dependencies. You can also
-choose to install renderthis with all of its dependencies:
+choose to install `renderthis` with all of its dependencies:
 
 ```{r}
-# From CRAN
-install.packages("renderthis", dependencies = TRUE)
-
 # From GitHub
-remotes::install_github("jhelvy/renderthis", dependencies = TRUE)
+pak::pak("jhelvy/renderthis", dependencies = TRUE)
 ```
 
 # Local Chrome Installation
